dis-to-legacy/platform/dummy/authorization.yaml
apiVersion: policy.linkerd.io/v1alpha1
kind: AuthorizationPolicy
metadata:
  name: kubewrapper-dummy-http
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: kubewrapper-dummy-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: dummy-allowed-clients
